--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,24 @@
 [package]
 name = "newsltr"
 version = "0.1.0"
+authors = ["Wassim Mansouri <wassim@wassimans.com>"]
 edition = "2021"
+
+[lib]
+# We could use any path here, but we are following the community convention
+# We could specify a library name using the `name` field. If unspecified,
+# cargo will default to `package.name`, which is what we want.
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "newsltr"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+actix-web = "4.3.1"
+tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
+
+[dev-dependencies]
+reqwest = "0.11.18"
