--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -64,6 +64,6 @@ jobs:
           override: true
 
       - name: Run cargo-tarpaulin
-        uses: actions-rs/tarpaulin@v0.1
+        uses: actions-rs/tarpaulin
         with:
-          args: '--ignore-tests'
+          args: "--ignore-tests"
